fixed the uneven size of left header image - added basic search functionality that lists recipe titles when similar keywords are typed into search input. Currently working on instantiating a modal window when a recipe card is clicked.

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,29 @@ main{
     letter-spacing: .3em;
 }
 
+form{
+    position: relative;
+}
+
+.recipe-search-container{
+    position: absolute;
+    width: 300px;
+    /* height: 300px; */
+    /* background-color: #2a2a2a; */
+    /* background-color: #fff; */
+    top: 30px;
+    right: 15px;
+}
+
+.recipe-search-item{
+    position: absolute;
+    top: 15px;
+    width: 300px;
+    height: 200px;
+    border: 1px solid #2a2a2a;
+    background-color:#fff;
+}
+
 .nav-img{
     width: 10rem;
 }
@@ -198,6 +221,28 @@ span{
 
 }
 
+.recipe-modal{
+    width: 75%;
+    max-height: 500px;
+    display: flex;
+    flex-direction: column;
+    padding: 2em;
+    background-color: #fff;
+    top: 30px;
+    right: 50px;
+    left: 50px;
+    bottom: 30px;
+}
+
+.overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(100,100,100, 0.4);
+}
+
 h4{
     font-family: 'Indie Flower', cursive;
     font-size: 1.5em;
@@ -227,10 +272,14 @@ article{
     margin: .5em;
 }
 
-.time-icon{
+.time-icon, .add-icon{
     max-width: 25px;
     height: 25px;
     
+}
+
+.add-icon{
+    display: none;
 }
 
 .svg-icon {
@@ -270,19 +319,21 @@ article{
 }
 
 .contact-form{
-    display: flex;
+    /* display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
-    width: 70%;
+    flex-wrap: wrap; */
+    width: 90%;
     margin: 0 auto;
 }
 
 .sign-up{
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    letter-spacing: .25em;
+    border: 2px solid #2a2a2a;
     padding: 10px;
-    margin: 1rem;
+    margin: 0 auto;
 
 }
 .sign-up p{
@@ -298,14 +349,14 @@ legend{
 }
 
 #email{
-    padding: 5px;
+    padding: 5px 5px 0 0;
     text-align: right;
-    flex-basis: 40%;
+    /* flex-basis: 40%; */
 }
 
 input[type="email"]{
-    padding: 0;
-    flex-basis: 60%
+    padding: 15px;
+    /* flex-basis: 60% */
 }
 
 #contact{
@@ -318,17 +369,23 @@ input[type="email"]{
     margin: 3rem 0;
 }
 
+#contact p{
+    font-weight: 700;
+}
+
 .icon-container{
     width: 100%;
     margin: 2rem;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-around;
 }
 
 .social-icon{
     height: 50px;
     width: 50px;
+    padding: 10px;
 }
 
 footer{
@@ -371,10 +428,14 @@ footer{
         
     }
 
+    .banner{
+        margin: 0;
+    }
+
     .side-img{
         order: 1;
         width: 50%;
-        height: 800px;
+        height: 75vh;
         margin: 0 auto;
         display: block;
     } 
@@ -396,5 +457,33 @@ footer{
         text-align: center;
         margin: 0 auto 2rem;
         background: transparent;
+    }
+
+    .contact-form{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    .sign-up{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        padding: 10px;
+        margin: 1rem;
+    
+    }
+
+    #email{
+        padding: 5px;
+        text-align: right;
+        flex-basis: 40%;
+    }
+    
+    input[type="email"]{
+        padding: 0;
+        /* flex-basis: 60% */
     }
 }
